--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="sketchBox">
-        <div class="testSquare off"></div>
-    </div>
+    <div id="sketchBox"></div>
     <script src="javascript.js"></script>
 </body>
 </html>
