slider working with color change now as js style change

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="inputRow">
+        <p id="label"></p>
+        <input id="slider" type="range" min="2" max="100" step="1" value="16">
+        <button id="select">Reset</button>
+    </div>
     <div id="sketchBox"></div>
     <script src="javascript.js"></script>
 </body>
