Selector switches between black and color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <input id="slider" type="range" min="2" max="100" step="1" value="16">
         <button id="select">Reset</button>
     </div>
+    <div id="radioRow">
+        <input type="radio" name="mode" value="black" checked> Black Pen
+        <input type="radio" name="mode" value="bonus"> Bonus Mode
+    </div>
     <div id="sketchBox"></div>
     <script src="javascript.js"></script>
 </body>
